# 5zadacha.4sem

./: CMakeLists.txt  Cube.h  Fabrica.h  Object.h  Sphere.h  Triangle.h  Vector3.h  conf.txt  main_5.cpp
